universal links routes and added routes for transactions - dynamic routes

--- a/public/view/m-chapter/add-chapter.ejs
+++ b/public/view/m-chapter/add-chapter.ejs
@@ -1224,7 +1224,7 @@
   
       const result = await response.json();
       if (response.ok) {
-        document.getElementById("formMessage").innerText = "Region added successfully!";
+        document.getElementById("formMessage").innerText = "Chapter added successfully!";
       } else {
         document.getElementById("formMessage").innerText = `Error: ${result.message}`;
       }
