--- a/public/view/partials/sidebar.ejs
+++ b/public/view/partials/sidebar.ejs
@@ -88,6 +88,39 @@
               </li>
               <!-- End::slide -->
 
+              <!-- Start::slide -->
+              <li class="slide has-sub">
+                <a href="javascript:void(0);" class="side-menu__item">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="w-6 h-6 side-menu__icon"
+                    fill="none"
+                    viewbox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M13.5 16.875h3.375m0 0h3.375m-3.375 0V13.5m0 3.375v3.375M6 10.5h2.25a2.25 2.25 0 0 0 2.25-2.25V6a2.25 2.25 0 0 0-2.25-2.25H6A2.25 2.25 0 0 0 3.75 6v2.25A2.25 2.25 0 0 0 6 10.5Zm0 9.75h2.25A2.25 2.25 0 0 0 10.5 18v-2.25a2.25 2.25 0 0 0-2.25-2.25H6a2.25 2.25 0 0 0-2.25 2.25V18A2.25 2.25 0 0 0 6 20.25Zm9.75-9.75H18a2.25 2.25 0 0 0 2.25-2.25V6A2.25 2.25 0 0 0 18 3.75h-2.25A2.25 2.25 0 0 0 13.5 6v2.25a2.25 2.25 0 0 0 2.25 2.25Z"
+                    ></path>
+                  </svg>
+                  <span class="side-menu__label"
+                    >Manage <br> Universal
+                    Links</span
+                  >
+                  <i class="ri-arrow-down-s-line side-menu__angle"></i>
+                </a>
+                <ul class="slide-menu child1">
+                  <li class="slide">
+                    <a href="/u/manage-universal-links" class="side-menu__item"
+                      >Manage Links</a
+                    >
+                  </li>
+                </ul>
+              </li>
+              <!-- End::slide -->
+
                             <!-- Start::slide -->
                             <li class="slide has-sub">
                               <a href="javascript:void(0);" class="side-menu__item">
@@ -202,6 +235,19 @@
                             </li>
                             <!-- End::slide -->
 
+                            <li class="slide has-sub">
+                              <a href="javascript:void(0);" class="side-menu__item">
+                                  <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 side-menu__icon" fill="none" viewbox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                                      <path stroke-linecap="round" stroke-linejoin="round" d="M3 13.125C3 12.504 3.504 12 4.125 12h2.25c.621 0 1.125.504 1.125 1.125v6.75C7.5 20.496 6.996 21 6.375 21h-2.25A1.125 1.125 0 0 1 3 19.875v-6.75ZM9.75 8.625c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125v11.25c0 .621-.504 1.125-1.125 1.125h-2.25a1.125 1.125 0 0 1-1.125-1.125V8.625ZM16.5 4.125c0-.621.504-1.125 1.125-1.125h2.25C20.496 3 21 3.504 21 4.125v15.75c0 .621-.504 1.125-1.125 1.125h-2.25a1.125 1.125 0 0 1-1.125-1.125V4.125Z"></path>
+                                  </svg>
+                                  <span class="side-menu__label">Transactions</span>
+                                  <i class="ri-arrow-down-s-line side-menu__angle"></i>
+                              </a>
+                              <ul class="slide-menu child1 fetch">
+                                  <!-- Dynamic links will be appended here -->
+                              </ul>
+                          </li>
+
               <!-- Start::slide -->
               <li class="slide has-sub">
                 <a href="javascript:void(0);" class="side-menu__item">
@@ -278,6 +324,8 @@
                                 </li>
                                 <!-- End::slide -->
 
+
+
                                                  <!-- Start::slide -->
                  <li class="slide has-sub">
                   <a href="javascript:void(0);" class="side-menu__item">
@@ -315,6 +363,10 @@
                   </ul>
                 </li>
                 <!-- End::slide -->
+
+                                                              <!-- Start::slide -->
+                                                             
+              <!-- End::slide -->
 
               <!-- Start::slide -->
               <li class="slide has-sub">
@@ -448,36 +500,6 @@
                 </a>
                 
               </li>
-
-              <!-- Start::slide -->
-              <li class="slide has-sub">
-                <a href="javascript:void(0);" class="side-menu__item">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    class="w-6 h-6 side-menu__icon"
-                    fill="none"
-                    viewbox="0 0 24 24"
-                    stroke-width="1.5"
-                    stroke="currentColor"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      d="M3 13.125C3 12.504 3.504 12 4.125 12h2.25c.621 0 1.125.504 1.125 1.125v6.75C7.5 20.496 6.996 21 6.375 21h-2.25A1.125 1.125 0 0 1 3 19.875v-6.75ZM9.75 8.625c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125v11.25c0 .621-.504 1.125-1.125 1.125h-2.25a1.125 1.125 0 0 1-1.125-1.125V8.625ZM16.5 4.125c0-.621.504-1.125 1.125-1.125h2.25C20.496 3 21 3.504 21 4.125v15.75c0 .621-.504 1.125-1.125 1.125h-2.25a1.125 1.125 0 0 1-1.125-1.125V4.125Z"
-                    ></path>
-                  </svg>
-                  <span class="side-menu__label">Transactions</span>
-                  <i class="ri-arrow-down-s-line side-menu__angle"></i>
-                </a>
-                <ul class="slide-menu child1">
-                  <li class="slide">
-                    <a href="./manage-transactions.html" class="side-menu__item"
-                      >View All Transactions</a
-                    >
-                  </li>
-                </ul>
-              </li>
-              <!-- End::slide -->
 
               <!-- Start::slide -->
               <li class="slide has-sub">
@@ -676,3 +698,9 @@
         <!-- End::main-sidebar -->
       </aside>
       <!-- End Main-Sidebar-->
+
+      <script src="../../assets/js/sidebar.js"></script>
+   
+
+      
+        
