--- a/public/view/m-member/manage-members.ejs
+++ b/public/view/m-member/manage-members.ejs
@@ -46,6 +46,9 @@
        <span> <b>02</b></span> 
       </button>
               <button class="btn btn-danger btn-wave me-0">
+                <i class="ri-share-upward-line me-1"></i> Bulk Upload Members
+              </button>
+              <button class="btn btn-danger btn-wave me-0">
                 <i class="ri-share-forward-line me-1"></i> Export Members
               </button>
             </div>
