--- a/public/view/m-universalLinks/manage-universal-links.ejs
+++ b/public/view/m-universalLinks/manage-universal-links.ejs
@@ -20,34 +20,17 @@
                 <ol class="breadcrumb mb-1">
                   <li class="breadcrumb-item">
                     <a href="javascript:void(0);" style="color: #d01f2f"
-                      >Region Management</a
+                      >Universal Links Management</a
                     >
                   </li>
                   <li class="breadcrumb-item 989178547 " aria-current="page">
-                    View All Regions
+                    View All Links
                   </li>
                 </ol>
               </nav>
               <h1 class="page-title fw-medium fs-18 mb-0">
-                Manage All Regions
+                Manage All Universal Links
               </h1>
-            </div>
-            <div class="btn-list">
-              <button class="btn btn-white btn-wave" style="background-color: gainsboro !important; border-radius: 10px;">
-                </i> Total Regions <br />
-               <span> <b>03</b></span> 
-              </button>
-              <button class="btn btn-white btn-wave" style="background-color: gainsboro !important; border-radius: 10px;">
-            </i> Running Regions <br />
-           <span> <b>03</b></span> 
-          </button>
-          <button class="btn btn-white btn-wave" style="background-color: gainsboro !important; border-radius: 10px;">
-        </i> Inactive Regions <br />
-       <span> <b>0</b></span> 
-      </button>
-              <button class="btn btn-danger btn-wave me-0">
-                <i class="ri-share-forward-line me-1"></i> Export Chapters
-              </button>
             </div>
           </div>
           <!-- Page Header Close -->
@@ -55,7 +38,7 @@
           <!-- Start::row-1 -->
           <div class="card custom-card" style="background-color: gainsboro">
             <div class="card-header justify-content-between">
-              <div class="card-title">All Regions</div>
+              <div class="card-title">All Universal Links</div>
               <div class="d-flex gap-3 align-items-center flex-wrap">
                 <div class="btn-group">
 
@@ -67,21 +50,13 @@
                   >
                     <i class="ti ti-sort-descending-2 me-1"></i> Filter
                   </button>
-                  <button
-                    class="btn btn-outline-light border"
-                    type="button"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
-                  >
-                    + Add New Region
-                  </button>
                 </div>
                 <div class="custom-form-group flex-grow-1">
                   <input
                     type="text"
                     id="searchChapterInput"
                     class="form-control"
-                    placeholder="Search Region.."
+                    placeholder="Search Universal Link.."
                     aria-label="Event : custom'id"
                     aria-describedby="button-addon2"
                   />
@@ -103,10 +78,10 @@
                   <thead>
                     <tr>
                       <th scope="col" style="border: 1px solid grey;">S.No.</th>
-                      <th scope="col" style="border: 1px solid grey;">Region Name</th>
-                      <th scope="col" style="border: 1px solid grey;">Region Headoffice Address</th>
-                      <th scope="col" style="border: 1px solid grey;">Chapter Days</th>
-                      <th scope="col" style="border: 1px solid grey;">Region Status</th>
+                      <th scope="col" style="border: 1px solid grey;">Universal Link Name</th>
+                      <th scope="col" style="border: 1px solid grey;">Universal Link Identify ID <b>(ULID)</b> </th>
+                      <th scope="col" style="border: 1px solid grey;">Link Slug </th>
+                      <th scope="col" style="border: 1px solid grey;">Status</th>
                     </tr>
                   </thead>
                   <tbody id="chaptersTableBody">
@@ -139,5 +114,7 @@
         </div>
       </div>
       <!-- End::content  -->
+
+      <script src="../../assets/js/universalLinks.js"></script>
 
       <%- include('../partials/footer') %> 
