--- a/public/view/m-universalLinks/manage-universal-links.ejs
+++ b/public/view/m-universalLinks/manage-universal-links.ejs
@@ -81,12 +81,11 @@
                       <th scope="col" style="border: 1px solid grey;">Universal Link Name</th>
                       <th scope="col" style="border: 1px solid grey;">Universal Link Identify ID <b>(ULID)</b> </th>
                       <th scope="col" style="border: 1px solid grey;">Link Slug </th>
+                      <th scope="col" style="border: 1px solid grey;">Payment Gateway <b>(Active)</b>  </th>
                       <th scope="col" style="border: 1px solid grey;">Status</th>
                     </tr>
                   </thead>
                   <tbody id="chaptersTableBody">
-                    
-
                   </tbody>
                 </table>
               </div>
