Fetched all transactions

--- a/public/view/m-transactions/manage-transactions.ejs
+++ b/public/view/m-transactions/manage-transactions.ejs
@@ -327,6 +327,7 @@
                           <th scope="col">Status</th>
                           <th scope="col">Transaction Id</th>
                           <th scope="col">Action</th>
+                          <th scope="col">E-Invoice</th>
                         </tr>
                       </thead>
                       <tbody>
@@ -387,6 +388,14 @@
                               <i class="ri-printer-line"></i>
                             </a>
                           </td>
+                          <td>
+                            <a
+                      href="/t/new-invoice"
+                      class="btn btn-sm btn-success btn-wave waves-light"
+                      >
+                      Generate E-Invoice</a
+                    >
+                          </td>
                         </tr>
                         <tr class="invoice-list">
                           <td>
@@ -440,6 +449,9 @@
                             >
                               <i class="ri-printer-line"></i>
                             </a>
+                          </td>
+                          <td>
+                            Not Applicable
                           </td>
                         </tr>
                         <tr class="invoice-list">
@@ -495,6 +507,9 @@
                               <i class="ri-printer-line"></i>
                             </a>
                           </td>
+                          <td>
+                            Not Applicable
+                          </td>
                         </tr>
                         <tr class="invoice-list">
                           <td>
@@ -549,6 +564,15 @@
                               <i class="ri-printer-line"></i>
                             </a>
                           </td>
+                          <td>
+                            <a
+                      href="/t/new-invoice"
+                      class="btn btn-sm btn-success btn-wave waves-light"
+                      >
+                      Generate E-Invoice</a
+                    >
+                          </td>
+                          
                         </tr>
                         <tr class="invoice-list">
                           <td>
@@ -602,6 +626,9 @@
                             >
                               <i class="ri-printer-line"></i>
                             </a>
+                          </td>
+                          <td>
+                            Not Applicable
                           </td>
                         </tr>
                         <tr class="invoice-list">
@@ -661,6 +688,14 @@
                               <i class="ri-printer-line"></i>
                             </a>
                           </td>
+                          <td>
+                            <a
+                      href="/t/new-invoice"
+                      class="btn btn-sm btn-success btn-wave waves-light"
+                      >
+                      Generate E-Invoice</a
+                    >
+                          </td>
                         </tr>
                         <tr class="invoice-list">
                           <td>
@@ -715,6 +750,14 @@
                               <i class="ri-printer-line"></i>
                             </a>
                           </td>
+                          <td>
+                            <a
+                      href="/t/new-invoice"
+                      class="btn btn-sm btn-success btn-wave waves-light"
+                      >
+                      Generate E-Invoice</a
+                    >
+                          </td>
                         </tr>
                         <tr class="invoice-list">
                           <td>
@@ -768,6 +811,9 @@
                             >
                               <i class="ri-printer-line"></i>
                             </a>
+                          </td>
+                          <td>
+                            Not Applicable
                           </td>
                         </tr>
                       
