--- a/public/view/partials/header.ejs
+++ b/public/view/partials/header.ejs
@@ -1050,7 +1050,7 @@
                     >
                       <div class="d-flex align-items-center">
                         <span class="avatar avatar-rounded avatar-xs lh-1 me-2">
-                          <img src="   images/flags/us_flag.jpg" alt="img" />
+                          <img src="../../assets/images/flags/us_flag-1.jpg" alt="img" />
                         </span>
                         English
                       </div>
@@ -1411,7 +1411,7 @@
                 <div class="d-flex align-items-center">
                   <div>
                     <img
-                      src="   images/faces/15.jpg"
+                      src="../../assets/images/faces/15-3.jpg"
                       alt="img"
                       class="avatar avatar-sm"
                       style="border-radius: 50px"
