--- a/public/view/partials/sidebar.ejs
+++ b/public/view/partials/sidebar.ejs
@@ -244,7 +244,11 @@
                                   <i class="ri-arrow-down-s-line side-menu__angle"></i>
                               </a>
                               <ul class="slide-menu child1 fetch">
-                                  <!-- Dynamic links will be appended here -->
+                                <li class="slide">
+                                  <a href="/t/all-transactions" class="side-menu__item"
+                                    >All Transactions</a
+                                  >
+                                </li>
                               </ul>
                           </li>
 
