--- a/public/view/m-region/manage-region.ejs
+++ b/public/view/m-region/manage-region.ejs
@@ -140,4 +140,6 @@
       </div>
       <!-- End::content  -->
 
+      <script src="../../assets/js/region.js"></script>
+
       <%- include('../partials/footer') %> 
