Fetched payment type

--- a/public/view/m-transactions/all-transactions.ejs
+++ b/public/view/m-transactions/all-transactions.ejs
@@ -200,7 +200,7 @@
                                     
 
 
-                                    
+
 
                                     </span
                                   >
@@ -333,6 +333,7 @@
                           <th scope="col">Transaction ID</th>
                           <th scope="col">PG Status</th>
                           <th scope="col">Gateway</th>
+                          <th scope="col">Payment Type</th>
                           <th scope="col">IRN</th>
                           <th scope="col">QR Code</th>
                           <th scope="col">E-Invoice Status</th>
