View Invoice done with all details

--- a/public/view/partials/sidebar.ejs
+++ b/public/view/partials/sidebar.ejs
@@ -414,7 +414,7 @@
 
 
 
-              <li class="slide has-sub">
+              <!-- <li class="slide has-sub">
                 <a href="javascript:void(0);" class="side-menu__item">
                   <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -503,7 +503,7 @@
                   
                 </a>
                 
-              </li>
+              </li> -->
 
               <!-- Start::slide -->
               <li class="slide has-sub">
