--- a/public/view/index.ejs
+++ b/public/view/index.ejs
@@ -451,7 +451,7 @@
                         <div class="card custom-card my-auto border">
                             <div class="card-body p-5">
                                 <p class="h5 mb-2 text-center">Sign In</p>
-                                <p class="mb-4 text-muted op-7 fw-normal text-center">Welcome back Henry !</p>
+                                <p class="mb-4 text-muted op-7 fw-normal text-center">Welcome back!</p>
                                 <!-- <div class="d-flex mb-3 justify-content-between gap-2 flex-wrap flex-lg-nowrap">
                                     <button class="btn btn-lg btn-light-ghost border d-flex align-items-center justify-content-center flex-fill bg-light">
                                         <span class="avatar avatar-xs flex-shrink-0">
