--- a/public/view/m-member/add-member.ejs
+++ b/public/view/m-member/add-member.ejs
@@ -935,7 +935,7 @@
     });
   
     try {
-      const response = await fetch('http://localhost:5000/api/members', {
+      const response = await fetch('https://bni-data-backend.onrender.com/api/members', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
