--- a/public/view/m-region/add-region.ejs
+++ b/public/view/m-region/add-region.ejs
@@ -1131,7 +1131,7 @@
     });
   
     try {
-      const response = await fetch('http://localhost:5000/api/regions', {
+      const response = await fetch('https://bni-data-backend.onrender.com/api/regions', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
