Manage Member some modifications

--- a/public/view/m-transactions/view-transaction.ejs
+++ b/public/view/m-transactions/view-transaction.ejs
@@ -52,7 +52,7 @@
                             </div>
                             <div class="ms-auto mt-md-0 mt-2">
                                 <button class="btn btn-sm btn-danger me-1" onclick="javascript:window.print();">Print<i class="ri-printer-line ms-1 align-middle d-inline-block"></i></button>
-                                <button class="btn btn-sm btn-success">Save As PDF<i class="ri-file-pdf-line ms-1 align-middle d-inline-block"></i></button>
+                                <!-- <button class="btn btn-sm btn-success">Save As PDF<i class="ri-file-pdf-line ms-1 align-middle d-inline-block"></i></button> -->
                             </div>
                         </div>
                         <div class="card-body">
