--- a/public/view/m-member/manage-members.ejs
+++ b/public/view/m-member/manage-members.ejs
@@ -59,7 +59,8 @@
               font-size: 1.2rem !important;
             }
           </style>
-          <div class="col-xl-12">
+          
+          <!-- <div class="col-xl-12">
             <div class="row">
               <div class="col-xxl-12 col-xl-12">
                 <div class="row" style="display: flex; justify-content: center;">
@@ -270,7 +271,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- Start::row-1 -->
           <div class="card custom-card" style="background-color: gainsboro">
